--- a/src/main/antora/modules/ROOT/pages/couchbase.adoc
+++ b/src/main/antora/modules/ROOT/pages/couchbase.adoc
@@ -6,8 +6,8 @@ Spring Data support for Couchbase contains a wide range of features:
 
 * Spring configuration support with xref:couchbase/configuration.adoc[Java-based `@Configuration` classes].
 * The xref:couchbase/template.adoc[`CouchbaseTemplate` and `ReactiveCouchbaseTemplate`] helper classes that provide object mapping between Couchbase collections and POJOs.
-* xref:couchbase/template.adoc#exception-translation[Exception translation] into Spring's portable {spring-data-commons-docs-url}data-access.html#dao-exceptions[Data Access Exception Hierarchy].
-* Feature rich object mapping integrated with _Spring's_ {spring-data-commons-docs-url}core.html#core-convert[Conversion Service].
+* xref:couchbase/template.adoc#exception-translation[Exception translation] into Spring's portable {spring-framework-docs}/data-access/dao.html#dao-exceptions[data-access.html#dao-exceptions][Data Access Exception Hierarchy].
+* Feature rich object mapping integrated with _Spring's_ {spring-framework-docs}/core/validation/convert.html[Conversion Service].
 * Annotation-based mapping metadata that is extensible to support other metadata formats.
 * Automatic implementation of xref:repositories.adoc[imperative and reactive `Repository` interfaces] including support for xref:repositories/custom-implementations.adoc[custom query methods].
 
